# shivaai

./: .gitignore  DELIVERY_SUMMARY.md  Makefile  README.md  config.example.yaml  core_engine_init.py  index.html  main_entry.py  pyproject.toml  quick_start.sh
.github/workflows/: build_desktop.yml  build_mobile.yml  ci.yml
shivai/: __init__.py  __main__.py
shivai/core_engine/: __init__.py  agent.py  command_parser.py  config.py  context_manager.py  plugin_loader.py  task_queue.py
shivai/plugins/: .gitkeep  __init__.py
shivai/utils/: __init__.py  logger.py
tests/: __init__.py
tests/test_core_engine/: __init__.py  test_core.py  test_plugin_loader.py
